--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
     <!-- FINE HEADER -->
 
+    <!-- INIZIO MAIN -->
     <main>
 
         <!-- INIZIO JUMBOTRON -->
@@ -41,7 +42,34 @@
         </div>
         <!-- FINE JUMBOTRON -->
 
+        <!-- INIZIO PRIMA SEZIONE -->
+        <section id="portfolio" class="my-5">
+            <div class="h2"></div>
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-3">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+        </section>
+        <!-- FINE PRIMA SEZIONE -->
+
+        <!-- INIZIO SECONDA SEZIONE -->
+        <!-- FINE SECONDA SEZIONE -->
+
+        <!-- INIZIO TERZA SEZIONE -->
+        <!-- FINE TERZA SEZIONE -->
+
+        
     </main>
+    <!-- FINE MAIN -->
+    
+    <!-- INIZIO FOOTER -->
+    <!-- FINE FOOTER -->
 
 </body>
 </html>
