add section 2 + section 3 + footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
 
         <!-- INIZIO JUMBOTRON -->
-        <div class="jumbotron py-2 px-3">
+        <div class="jumbotron">
             <div class="container">
                 <div class="row flex-column">
                     <div class="col"></div>
@@ -43,10 +43,10 @@
         <!-- FINE JUMBOTRON -->
 
         <!-- INIZIO PRIMA SEZIONE -->
-        <section id="portfolio" class="my-5">
+        <section id="portfolio" class="my-4">
             <div class="h2"></div>
             <div class="container">
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-3">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 gy-3">
                     <div class="col"></div>
                     <div class="col"></div>
                     <div class="col"></div>
@@ -59,16 +59,54 @@
         <!-- FINE PRIMA SEZIONE -->
 
         <!-- INIZIO SECONDA SEZIONE -->
+        <section id="about" class="my-4">
+            <div class="h2"></div>
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-2">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+            <div class="btn"></div>
+        </section>
         <!-- FINE SECONDA SEZIONE -->
 
         <!-- INIZIO TERZA SEZIONE -->
+        <section id="contact" class="my-4">
+            <div class="container">
+                <div class="row flex-column">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+        </section>
         <!-- FINE TERZA SEZIONE -->
 
-        
     </main>
     <!-- FINE MAIN -->
     
     <!-- INIZIO FOOTER -->
+    <footer>
+
+        <!-- INIZIO FOOTER-TOP -->
+        <div class="footer-top">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+        </div>
+        <!-- FINE FOOTER-TOP -->
+
+        <!-- INIZIO FOOTER-BOTTOM -->
+        <div class="footer-bottom"></div>
+        <!-- FINE FOOTER BOTTOM -->
+
+    </footer>
     <!-- FINE FOOTER -->
 
 </body>
