--- a/index.html
+++ b/index.html
@@ -16,13 +16,25 @@
 <body>
 
     <!-- INIZIO HEADER -->
-    <header class="py-2">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-auto"></div>
-                <div class="col-auto"></div>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark px-md-3 px-lg-5">
+            <div class="container-fluid">
+                <strong>
+                    <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+                </strong>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-grow-0" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#portfolio">PORTFOLIO</a>
+                        <a class="nav-link active" aria-current="page" href="#about">ABOUT</a>
+                        <a class="nav-link active" aria-current="page" href="#contacts">CONTACT</a>
+                    </div>
+                </div>
             </div>
-        </div>
+        </nav>
     </header>
     <!-- FINE HEADER -->
 
