--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
 
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -43,11 +48,22 @@
 
         <!-- INIZIO JUMBOTRON -->
         <section id="jumbotron" class="d-flex flex-column align-items-center text-center py-5">
-        <div class="box box-img">
-        </div>
-        <h1></h1>
-        <div class="box box-icon"></div>
-        <p></p>
+            <div class="box box-img">
+                <img src="./img/avatar.svg" alt="Profile image">
+            </div>
+            <h1>START BOOTSTRAP</h1>
+            <div class="box box-icon">
+                <span class="line"></span>
+                <span class="icon display-6">
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                <span class="line"></span>
+            </div>
+            <ul>
+                <li>GRAPHIC ARTIST</li>
+                <li>- WEB DESIGNER</li>
+                <li>- ILLUSTRATOR</li>
+            </ul>
         </section>
         <!-- FINE JUMBOTRON -->
 
