--- a/index.html
+++ b/index.html
@@ -73,32 +73,48 @@
                 <div class="row">
                     <div class="col-12 d-flex flex-column align-items-center text-center">
                         <h1>
-                            SECTION TITLE
+                            PORTFOLIO
                         </h1>
                         <div class="box box-icon">
-                            icon
+                            <span class="line"></span>
+                            <span class="icon display-6">
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <span class="line"></span>
                         </div>
                     </div>
                 </div>
         
-                <div class="row">
+                <div class="row gy-3">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="box box-img"></div>
+                        <div class="box box-img">
+                            <img src="./img/cabin.png" alt="Cabin image">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="box box-img"></div>
+                        <div class="box box-img">
+                            <img src="./img/cake.png" alt="Cake image">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="box box-img"></div>
+                        <div class="box box-img">
+                            <img src="./img/circus.png" alt="Circus image">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="box box-img"></div>
+                        <div class="box box-img">
+                            <img src="./img/game.png" alt="Game image">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="box box-img"></div>
+                        <div class="box box-img">
+                            <img src="./img/safe.png" alt="Safe image">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="box box-img"></div>
+                        <div class="box box-img">
+                            <img src="./img/submarine.png" alt="Submarine image">
+                        </div>
                     </div>
                 </div>
             </div>
