add contacts section

--- a/index.html
+++ b/index.html
@@ -164,40 +164,46 @@
         <!-- FINE SECONDA SEZIONE -->
 
         <!-- INIZIO TERZA SEZIONE -->
-        <section id="contacts" class="py-5">
+        <section id="contacts" class="pt-5 pb-3">
             <div class="container">
 
                 <div class="row">
                     <div class="col-12 d-flex flex-column align-items-center text-center">
                         <h1>
-                            SECTION TITLE
+                            CONTACT ME
                         </h1>
                         <div class="box box-icon">
-                            icon
+                            <span class="line"></span>
+                            <span class="icon display-6">
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <span class="line"></span>
                         </div>
                     </div>
                 </div>
         
         
-                <form action="https:tizianonicolai.com/lezioni/form-printer" method="GET" class="row justify-content-center">
+                <form action="https:tizianonicolai.com/lezioni/form-printer" method="GET">
 
-                    <div class="col-10">
-                        <input type="text">
+                    <div class="row justify-content-center">
+                        <div class="col-8 py-2">
+                            <input type="text" placeholder="Name">
+                        </div>
+                        <div class="col-8 py-2">
+                            <input type="text" placeholder="Email Address">
+                        </div>
+                        <div class="col-8 py-2">
+                            <input type="text" placeholder="Phone Number">
+                        </div>
+                        <div class="col-8 py-2">
+                            <textarea name="" id="" cols="30" rows="5" placeholder="Message"></textarea>
+                        </div>
                     </div>
-                    <div class="col-10">
-                        <input type="text">
-                    </div>
-                    <div class="col-10">
-                        <input type="text">
-                    </div>
-                    <div class="col-10">
-                        <input type="text">
-                    </div>
-                    <div class="col-10">
-                        <textarea name="" id="" cols="30" rows="10"></textarea>
-                    </div>
-                    <div class="col-10">
-                        <input type="submit" value="">
+
+                    <div class="row">
+                        <div class="col-auto offset-2 py-2">
+                            <input class="btn btn-primary" type="submit" value="Send">
+                        </div>
                     </div>
 
                 </form>
