--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
                 <div class="row">
                     <div class="col-12 d-flex flex-column align-items-center text-center">
-                        <h1>
+                        <h2>
                             CONTACT ME
-                        </h1>
+                        </h2>
                         <div class="box box-icon">
                             <span class="line"></span>
                             <span class="icon display-6">
@@ -216,27 +216,43 @@
     <!-- FINE MAIN -->
     
     <!-- INIZIO FOOTER -->
-    <footer class="pt-5">
+    <footer>
 
         <!-- INIZIO FOOTER-TOP -->
-        <div class="footer-top">
+        <div class="footer-top py-4">
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-12 col-md-4">
-                        <h3>SUBTITLE</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+
+                    <div class="col-12 col-md-4 pb-4 pb-md-0">
+                        <div class="h5">LOCATION</div>
+                        <p>
+                            2215 John Daniel Drive Clark, MO 54243
+                        </p>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <h3>SUBTITLE</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+
+                    <div class="col-12 col-md-4 pb-4 pb-md-0">
+                        <div class="h5">AROUND THE WEB</div>
+                        <span class="circle">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </span>
+                        <span class="circle">
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </span>
+                        <span class="circle">
+                            <i class="fa-brands fa-twitter"></i>
+                        </span>
+                        <span class="circle">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </span>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <h3>SUBTITLE</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+
+                    <div class="col-12 col-md-4 pb-4 pb-md-0">
+                        <div class="h5">ABOUT FREELANCER</div>
+                        <p>
+                            Freelance is a free to use, open source Bootstrap theme created by <span class="green-text">Start Bootstrap</span>
+                        </p>
                     </div>
-                    <div class="col-12 text-center">
-                        Lorem ipsum dolor sit amet.
-                    </div>
+
                 </div>
             </div>
         </div>
