--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
 
         <!-- INIZIO FOOTER-BOTTOM -->
         <div class="footer-bottom text-center py-5">
-            <h4>
-                Lorem ipsum dolor sit amet.
-            </h4>
+            <small>
+                Copyright &#0169; Your Website 2019
+            </small>
         </div>
         <!-- FINE FOOTER BOTTOM -->
 
